--- a/source/proxtopus.vcxproj.filters
+++ b/source/proxtopus.vcxproj.filters
@@ -69,6 +69,12 @@
     <Filter Include="src\algs\cipher">
       <UniqueIdentifier>{6ae7d117-7f2b-40b4-acc9-501edaea1260}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\algs\hash">
+      <UniqueIdentifier>{fe52806f-cf18-476b-94d2-80a24e48bfb8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\algs\kdf">
+      <UniqueIdentifier>{3d8db033-07f4-40d4-8dbe-36ddbb3c449b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="proxtopus\pch.cpp">
@@ -113,13 +119,7 @@
     <ClCompile Include="botan\rng.cpp">
       <Filter>_botan</Filter>
     </ClCompile>
-    <ClCompile Include="botan\stateful_rng.cpp">
-      <Filter>_botan</Filter>
-    </ClCompile>
     <ClCompile Include="botan\os_utils.cpp">
-      <Filter>_botan</Filter>
-    </ClCompile>
-    <ClCompile Include="botan\hmac_drbg.cpp">
       <Filter>_botan</Filter>
     </ClCompile>
     <ClCompile Include="botan\mem_ops.cpp">
@@ -162,12 +162,6 @@
       <Filter>_botan</Filter>
     </ClCompile>
     <ClCompile Include="botan\keccak_perm_bmi2.cpp">
-      <Filter>_botan</Filter>
-    </ClCompile>
-    <ClCompile Include="botan\system_rng.cpp">
-      <Filter>_botan</Filter>
-    </ClCompile>
-    <ClCompile Include="botan\dyn_load.cpp">
       <Filter>_botan</Filter>
     </ClCompile>
     <ClCompile Include="botan\filter.cpp">
@@ -808,12 +802,6 @@
     <ClInclude Include="botan\internal\donna128.h">
       <Filter>_botan\h</Filter>
     </ClInclude>
-    <ClInclude Include="botan\internal\dyn_load.h">
-      <Filter>_botan\h</Filter>
-    </ClInclude>
-    <ClInclude Include="botan\entropy_src.h">
-      <Filter>_botan\h</Filter>
-    </ClInclude>
     <ClInclude Include="botan\exceptn.h">
       <Filter>_botan\h</Filter>
     </ClInclude>
@@ -839,9 +827,6 @@
       <Filter>_botan\h</Filter>
     </ClInclude>
     <ClInclude Include="botan\internal\hmac.h">
-      <Filter>_botan\h</Filter>
-    </ClInclude>
-    <ClInclude Include="botan\hmac_drbg.h">
       <Filter>_botan\h</Filter>
     </ClInclude>
     <ClInclude Include="botan\internal\int_utils.h">
@@ -916,9 +901,6 @@
     <ClInclude Include="botan\internal\simd_avx512.h">
       <Filter>_botan\h</Filter>
     </ClInclude>
-    <ClInclude Include="botan\stateful_rng.h">
-      <Filter>_botan\h</Filter>
-    </ClInclude>
     <ClInclude Include="botan\internal\stl_util.h">
       <Filter>_botan\h</Filter>
     </ClInclude>
@@ -929,9 +911,6 @@
       <Filter>_botan\h</Filter>
     </ClInclude>
     <ClInclude Include="botan\sym_algo.h">
-      <Filter>_botan\h</Filter>
-    </ClInclude>
-    <ClInclude Include="botan\system_rng.h">
       <Filter>_botan\h</Filter>
     </ClInclude>
     <ClInclude Include="botan\types.h">
@@ -1285,6 +1264,21 @@
     <ClInclude Include="proxtopus\aead_chacha20poly1305.h">
       <Filter>src\algs\aead</Filter>
     </ClInclude>
+    <ClInclude Include="conf.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="proxtopus\conf_def.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="proxtopus\botan_hash.h">
+      <Filter>src\algs\hash</Filter>
+    </ClInclude>
+    <ClInclude Include="proxtopus\hmac.h">
+      <Filter>src\algs\mac</Filter>
+    </ClInclude>
+    <ClInclude Include="proxtopus\hkdf.h">
+      <Filter>src\algs\kdf</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="proxtopus\proxtopus.rc">
@@ -1306,5 +1300,10 @@
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="proxtopus.natvis" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="proxtopus\chacha20_select.inl">
+      <Filter>src\algs\cipher</Filter>
+    </None>
   </ItemGroup>
 </Project>
