--- a/source/makefile
+++ b/source/makefile
@@ -39,7 +39,7 @@ FILES_CPP_BOTAN += hmac keccak_perm keccak_perm_bmi2 keypair make_prm md5 mem_op
 FILES_CPP_BOTAN += msg_cert_req msg_cert_status msg_cert_verify msg_certificate_12 msg_client_hello msg_client_kex msg_finished msg_hello_verify msg_server_hello msg_server_kex
 FILES_CPP_BOTAN += msg_session_ticket name_constraint numthry ocsp ocsp_types os_utils pcurves pcurves_generic pcurves_secp224r1 pcurves_secp256r1 pcurves_secp384r1
 FILES_CPP_BOTAN += pcurves_secp521r1 pem pk_algs pk_keys pk_ops pkcs8 prf_tls primality primes pss_params pssr pubkey reducer rmd160 rng rsa salsa20 sc_muladd sc_reduce
-FILES_CPP_BOTAN += sha1 sha1_simd sha1_x86 sha2_32 sha2_32_avx2 sha2_32_simd sha2_32_x86 sha2_64 sha2_64_avx2 sha3 sm3 tls_alert tls_algos
+FILES_CPP_BOTAN += sha1 sha1_simd sha1_x86 sha2_32 sha2_32_avx2 sha2_32_simd sha2_32_x86 sha2_64 sha2_64_x86 sha2_64_avx2 sha3 sm3 tls_alert tls_algos
 FILES_CPP_BOTAN += tls_callbacks tls_cbc tls_channel_impl_12 tls_ciphersuite tls_extensions tls_extensions_cert_status_req tls_handshake_hash tls_handshake_io tls_handshake_state
 FILES_CPP_BOTAN += tls_handshake_transitions tls_policy tls_record tls_server_impl_12 tls_session tls_session_key tls_session_manager tls_session_manager_memory
 FILES_CPP_BOTAN += tls_signature_scheme tls_suite_info tls_version x448 x448_internal x509_crl x509_dn x509_ext x509_key x509_obj x509cert x509path x25519 xmd
